--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Screen Recorder with Auto-Transcription and Translation</title>
+  <title>Record and Translate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+  <!-- Favicon: microphone -->
+  <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%221em%22 font-size=%2280%22>🎙️</text></svg>"> 
 </head>
 <body>
   <main class="container">
@@ -26,3 +29,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
