--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <video id="preview" controls playsinline></video>
     <div class="subtitle-section">
-      <h2>Subtitles (Automatic Language)</h2>
+      <h2>Subtitles (German only)</h2>
       <div id="subtitles" class="subtitle-box"></div>
       <h2>Translation (English)</h2>
       <div id="translations" class="subtitle-box"></div>
@@ -29,4 +29,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
