--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     </div>
     <a id="downloadLink" download="recording.webm" style="display:none">Download Recording</a>
   </main>
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
