--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
   <main class="container">
     <h1>Screen Recorder & Subtitle Translator</h1>
     <div class="controls">
-      <button id="recordBtn">⏺️ Record Screen & Audio</button>
-      <button id="stopBtn" disabled>⏹️ Stop & Download</button>
+      <button id="recordBtn">⏺️ Record Screen </button>
+      <button id="stopBtn" disabled>⏹️ Stop </button>
       <span id="status">Idle</span>
     </div>
     <video id="preview" controls playsinline></video>
     <div class="subtitle-section">
+      <!--
       <h2>Subtitles (German only)</h2>
       <div id="subtitles" class="subtitle-box"></div>
       <h2>Translation (English)</h2>
       <div id="translations" class="subtitle-box"></div>
+      -->
     </div>
     <a id="downloadLink" download="recording.webm" style="display:none">Download Recording</a>
   </main>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
