Fix HTML structure and clean up comments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <main class="container">
-    <h1>Screen Recorder & Subtitle Translator</h1>
+    <h1>Screen Recorder</h1>
     <div class="controls">
       <button id="recordBtn">⏺️ Record Screen </button>
       <button id="stopBtn" disabled>⏹️ Stop </button>
@@ -31,6 +31,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
